--- a/docker/templates/index.html
+++ b/docker/templates/index.html
@@ -24,6 +24,7 @@
         <tr><td><a href="/shadow">Shadow</a></td></tr>
         <tr><td><a href="/endpoint">Endpoint</a></td></tr>
         <tr><td><a href="/cert">Cert</a></td></tr>
+        <tr><td><a href="/log">Log</a></td></tr>
         <tr>
             <td><a href="https://aws.amazon.com/what-is-cloud-computing"><img src="https://d0.awsstatic.com/logos/powered-by-aws-white.png" alt="Powered by AWS Cloud Computing"></a></td>
         </tr>            
